--- a/projeto_parcial/src/main/webapp/index.xhtml
+++ b/projeto_parcial/src/main/webapp/index.xhtml
@@ -17,8 +17,8 @@
 					<p:column headerText="E-mail:">
 						<h:outputText value="#{register.email}" />
 					</p:column>
-					<p:column headerText="Idade:">
-						<h:outputText value="#{register.age}" />
+					<p:column headerText="Data de Nascimento:">
+						<h:outputText value="#{register.birthDate}" />
 					</p:column>
 					<p:column headerText="Endereço:">
 						<h:outputText value="#{register.address}" />
